Được tạo bằng Colaboratory

--- a/Buoi1_Gioithieu_Python.ipynb
+++ b/Buoi1_Gioithieu_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMh+SR/VD+v7S117lVjVeQd",
+      "authorship_tag": "ABX9TyOPSSSPmG4RflSc+msOSuO8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,13 +59,63 @@
     {
       "cell_type": "code",
       "source": [
-        "#Bai 14\n"
+        "#Bai 14\n",
+        "#a) Tao mang 2 chieu chua so nguyen ngau nhien\n",
+        "import numpy as np\n",
+        "m = int(input(\"Nhap so dong: \"))\n",
+        "n = int(input(\"Nhap so cot: \"))\n",
+        "a = np.random.randint(-10, 10, (m,n))\n",
+        "a\n",
+        "#b) Xuat cac phan tu thuoc dong K\n",
+        "k = int(input(\"Nhap dong k: \"))\n",
+        "if(k < m and k >= 0):\n",
+        "  print(a[k])\n",
+        "else:\n",
+        "  print(\"Dong k khong co trong mang\")\n",
+        "#c) Xuat cac phan tu thuoc cot L\n",
+        "l = int(input(\"Nhap dong l: \"))S\n",
+        "if(l < n and l >= 0):\n",
+        "  for i in range(n):\n",
+        "    print(a[i][l])\n",
+        "else:\n",
+        "  print(\"Dong l khong co trong mang\")"
       ],
       "metadata": {
-        "id": "P8bHk8y9aZmy"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 408
+        },
+        "id": "P8bHk8y9aZmy",
+        "outputId": "ff29526d-1de3-4598-834f-ec3b1e3506d1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhap so dong: 3\n",
+            "Nhap so cot: 4\n",
+            "Nhap dong k: 2\n",
+            "[ 9  8 -9  4]\n",
+            "Nhap dong l: 2\n",
+            "-8\n",
+            "-5\n",
+            "-9\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-52-9bcef1db3c96>\u001b[0m in \u001b[0;36m<cell line: 16>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Dong l khong co trong mang\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: index 3 is out of bounds for axis 0 with size 3"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
