Được tạo bằng Colaboratory

--- a/Buoi1_Gioithieu_Python.ipynb
+++ b/Buoi1_Gioithieu_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiCGsvuejTY++PjhIYY1iH",
+      "authorship_tag": "ABX9TyNr4BXm6Eva8dnkmLm+N1n+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,7 +65,7 @@
         "m = int(input(\"Nhap so dong: \"))\n",
         "n = int(input(\"Nhap so cot: \"))\n",
         "a = np.random.randint(-10, 10, (m,n))\n",
-        "a\n",
+        "print(a)\n",
         "#b) Xuat cac phan tu thuoc dong K\n",
         "k = int(input(\"Nhap dong k: \"))\n",
         "if(k < m and k >= 0):\n",
@@ -75,15 +75,38 @@
         "#c) Xuat cac phan tu thuoc cot L\n",
         "l = int(input(\"Nhap dong l: \"))\n",
         "if(l < n and l >= 0):\n",
-        "  print(a[:,k])2\n",
+        "  for i in range(m):\n",
+        "    print(a[i][l])\n",
         "else:\n",
         "  print(\"Dong l khong co trong mang\")"
       ],
       "metadata": {
-        "id": "P8bHk8y9aZmy"
+        "id": "P8bHk8y9aZmy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ff427f25-e2bb-4255-97c1-05500b24f230"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhap so dong: 3\n",
+            "Nhap so cot: 4\n",
+            "[[ 7 -1 -6 -4]\n",
+            " [ 6  7  0  1]\n",
+            " [ 1  0  8  2]]\n",
+            "Nhap dong k: 1\n",
+            "[6 7 0 1]\n",
+            "Nhap dong l: 2\n",
+            "-6\n",
+            "0\n",
+            "8\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -126,7 +149,7 @@
         "id": "7Sib75K-artF",
         "outputId": "020c6f99-7170-4d32-8b23-836f1ad622af"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
