Được tạo bằng Colaboratory

--- a/Buoi1_Gioithieu_Python.ipynb
+++ b/Buoi1_Gioithieu_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNr4BXm6Eva8dnkmLm+N1n+",
+      "authorship_tag": "ABX9TyN9Gq8bhdKiB+c4ZLOe2pLQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,7 +139,7 @@
         "      count += 1\n",
         "  return count\n",
         "\n",
-        "SinhVien(2)\n",
+        "SinhVien(3)\n",
         "print(\"So sinh vien du dieu kien len lop la: \" + str(dem_SV_Duoc_Len_Lop()))"
       ],
       "metadata": {
@@ -147,9 +147,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Sib75K-artF",
-        "outputId": "020c6f99-7170-4d32-8b23-836f1ad622af"
+        "outputId": "6f33424a-e14d-4aaa-9da6-798d287a1099"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,6 +161,10 @@
             "Nhap diem trung binh: 7\n",
             "Nhap ma sinh vien: 2\n",
             "Nhap ten sinh vien: B\n",
+            "Nhap nam sinh: 2003\n",
+            "Nhap diem trung binh: 4\n",
+            "Nhap ma sinh vien: 3\n",
+            "Nhap ten sinh vien: C\n",
             "Nhap nam sinh: 2003\n",
             "Nhap diem trung binh: 8\n",
             "So sinh vien du dieu kien len lop la: 2\n"
